--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	
 <head>
-	<p><font size="20px" color="green">Calculate your age here</font></p>
+	<center><p><b><font size="20px" color="green">Calculate your age here</font></b></p><center>
     <title>Exact Age Calculator</title>
 
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
